clusters/workload/core/observability/manifests/grafana-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: observability
spec:
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https-grafana
  hostnames:
    - grafana.kharnox.com
  rules:
    - backendRefs:
        - name: observability-grafana
          port: 80
